fix spacing

--- a/app/projects/Projects.module.scss
+++ b/app/projects/Projects.module.scss
@@ -21,7 +21,7 @@
   margin-inline: auto;
 
   > div {
-    margin-block: 6rem;
+    margin-block-start: 6rem;
 
     &:first-child {
       margin-block-start: 0;
