--- a/components/mdx/HalfAndHalf.module.scss
+++ b/components/mdx/HalfAndHalf.module.scss
@@ -6,4 +6,8 @@
   > img {
     width: 100%;
   }
+
+  + .halfAndHalf {
+    margin-block-start: 1rem;
+  }
 }
