--- a/components/mdx/Hero.module.scss
+++ b/components/mdx/Hero.module.scss
@@ -9,6 +9,7 @@
   }
 
   h1 {
+    font-weight: bold;
     width: clamp(20rem, calc(100% - 14rem), 88rem);
     margin-inline: auto;
     margin-bottom: -0.6em;
